--- a/package.json
+++ b/package.json
@@ -3,14 +3,29 @@
   "version": "0.1.0",
   "description": "",
   "main": "./src/index.js",
-  "author": "YoshinoriN",
   "license": "MIT",
-  "dependencies": {
-    "git-commit-statistics": "0.3.0"
+  "author": {
+    "name": "YoshinoriN",
+    "email": "yoshinorin.net@outlook.com",
+    "url": "https://yoshinorin.net"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YoshinoriN/hexo-generator-git-commit-statistics"
+  },
+  "bugs": {
+    "url": "https://github.com/YoshinoriN/hexo-generator-git-commit-statistics/issues"
+  },
+  "keywords": [
+    "hexo",
+    "git commit"
+  ],
   "scripts": {
     "test": "jest",
     "eslint": "eslint ."
+  },
+  "dependencies": {
+    "git-commit-statistics": "0.3.0"
   },
   "devDependencies": {
     "coveralls": "3.0.2",
