chore: change author's url

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": {
     "name": "YoshinoriN",
     "email": "yoshinorin.net@outlook.com",
-    "url": "https://yoshinorin.net"
+    "url": "https://about.yoshinorin.net"
   },
   "repository": {
     "type": "git",
